fix total pricing text and editbilling summary spacing

--- a/src/components/edit-billing/information/billling/stylesheet.scss
+++ b/src/components/edit-billing/information/billling/stylesheet.scss
@@ -2,7 +2,7 @@
   .order-summary {
     border: 1px solid rgba(0, 0, 0, 0.075);
     border-radius: 2px;
-    padding: 2em 4em 2em 2.5em;
+    padding: 2em 2em 3em;
 
     h3 {
       font-weight: bold;
